fix formatting issue on safari/chrome

--- a/public/static/css/base/_defaults.scss
+++ b/public/static/css/base/_defaults.scss
@@ -1,2 +1,5 @@
 .btn {
 }
+#main {
+  min-height: calc(100vh - 140px);
+}
