--- a/public/static/css/components/_footer.scss
+++ b/public/static/css/components/_footer.scss
@@ -1,5 +1,4 @@
 footer {
-  margin-top: 20px;
   z-index:10000;
   display: flex;
   justify-content: center;
