--- a/public/static/css/components/header.scss
+++ b/public/static/css/components/header.scss
@@ -7,12 +7,19 @@ header {
   a {
     text-decoration: none;
   }
+  a.header-img-container--home {
+    max-width: 80vw;
+    max-height: 40vh;
+    margin: 10vh auto 5vh;
+  }
   img {
+    max-width:100%;
+  max-height: 70px;
   }
   img.header-img--home {
-    max-height: 50vh;
-    max-width: 80vh;
-    margin-top: 15vh;
+    max-width:100%;
+    max-height:100%;
+    object-fit: contain;
   }
   h1 {
     color: $orange;
