--- a/public/static/css/pages/_home.scss
+++ b/public/static/css/pages/_home.scss
@@ -32,8 +32,12 @@
     }
   }
   section {
-    height: calc(100vh - 20px);
-  } 
+    min-height: calc(100vh - 70px);
+    max-width: 100vw;
+    overflow: hidden;
+    top: 0;
+    max-height: calc(100vh - 70px);
+  }
   input {
     display: block;
     width: 100%;
@@ -101,6 +105,9 @@
   .bands {
     z-index: -1;
     transform: rotate(16deg);
+    margin-left: -25vw;
+    position: fixed;
+    bottom: 0;
     p:nth-of-type(1) {
       height: 12vh;
       width: 150vw;
@@ -116,5 +123,10 @@
       width: 150vw;
       background-color: $yellow;
     }
+  }
+  footer {
+    position: fixed;
+    bottom: 0;
+    max-height: 70px;
   }
 }
